--- a/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.html
+++ b/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575663523" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1575663523" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1575663523" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575663523" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575663523" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575663523" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1575663523" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575663523" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1576180361" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1576180361" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1576180361" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1576180361" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1576180361" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1576180361" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1576180361" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1576180361" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575663523" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1576180361" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575663523" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575663523" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1576180361" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1576180361" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -105,7 +105,7 @@
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Videamus animi partes, quarum est conspectus illustrio
+									Veggies sunt bona vobis, proinde vos postulo
 							</h1>
 		</div>
 	</div>
@@ -114,7 +114,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Videamus animi partes, quarum est conspectus illustrio
+									Veggies sunt bona vobis, proinde vos postulo
 							</h2>
 		</div>
 	</div>
@@ -123,7 +123,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Videamus animi partes, quarum est conspectus illustrio
+									Veggies sunt bona vobis, proinde vos postulo
 							</h3>
 		</div>
 	</div>
@@ -132,7 +132,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Videamus animi partes, quarum est conspectus illustrio
+									Veggies sunt bona vobis, proinde vos postulo
 							</h4>
 		</div>
 	</div>
@@ -141,7 +141,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Videamus animi partes, quarum est conspectus illustrio
+									Veggies sunt bona vobis, proinde vos postulo
 							</h5>
 		</div>
 	</div>
@@ -150,7 +150,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Videamus animi partes, quarum est conspectus illustrio
+									Veggies sunt bona vobis, proinde vos postulo
 							</h6>
 		</div>
 	</div>
@@ -163,7 +163,7 @@
 			</div>
 			<div class="block-title">
 				<h1>
-											Philosophi autem in
+											Quae cum essent dicta
 									</h1>
 			</div>
 		</div>
@@ -173,7 +173,7 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Beats all you&#039;ve ever saw, been in trouble with the law since the day they was born. Straight&#039;nin&#039; the curve, flat&#039;nin&#039; the hills. Someday the mountain might get &#039;em, but the law never will. Makin&#039; their way, the only way they know how, that&#039;s just a little bit more than the law will allow. Just good ol&#039; boys, wouldn&#039;t change if they could, fightin&#039; the system like a true modern day Robin Hood.
+									Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.
 							</p>
 		</div>
 	</div>
@@ -227,10 +227,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1575663523">
+<script id="pl-js-polyfill-insert-1576180361">
   (function() {
     if (self != top) {
-      var cb = '1575663523';
+      var cb = '1576180361';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -240,10 +240,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1575663523">
+<script id="pl-js-insert-1576180361">
   (function() {
     if (self != top) {
-      var cb = '1575663523';
+      var cb = '1576180361';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
