--- a/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
@@ -1,6 +1,7 @@
 
 	<div class="drupal-message status-message">
-					You are awesome at life!
+					Landing page <a href="#">My Great Page</a> has been updated!
+
 			</div>
 	<div class="drupal-message warning-message">
 					Beware of purse dog!
